<resources>
    <string name="app_name">RentHome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="Login">Login</string>
    <string name="Explore">Explore</string>
    <string name="Offer">Offer</string>
    <string name="Map">Map</string>
    <string name="Profile">Profile</string>
    <string name="Sign_up">Sign Up</string>
    <string name="search">search</string>
    <string name="content_description_search">content_description_search</string>
    <string name="more">more</string>
    <string name="content_description_more">content_description_more</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="language_is_changed">Language is changed</string>
    <string name="mode_is_changed">Mode is changed</string>
    <string name="mode_is_changed_dark">Mode is chanched to Dark</string>
    <string name="mode_is_changed_light">Mode is changed to Light</string>
    <string name="register">Register</string>
    <string name="do_you_have_an_account">Do you have an  account ?</string>
    <string name="helper_text">Password must have 6 chars!</string>
    <string name="hint_email">Email</string>
    <string name="don_t_have_an_account">Do not have an account ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Password">Password</string>
    <string name="Reservation">Reservation</string>
    <string name="select_travel_data">Select travel data</string>
    <string name="confirm">Confirm</string>
    <string name="summary">Summary</string>
    <string name="change_password">Change password</string>
    <string name="update_information">Update</string>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="cancel">cancel</string>
    <string name="title">Title</string>
    <string name="price_for_one_day">Price for one day</string>
    <string name="description">Description</string>
    <string name="add_image">Add image</string>
    <string name="failed_login">Incorrect credentials!</string>
    <string name="Login_Correct">Login is corect</string>
    <string name="InCorrectLogin">"Login is incorrect! "</string>
    <string name="hintincorecpasssword">Your password,username must contain 6 characters and email must have @ !</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_reservation">My Reservation</string>
    <string name="languageENG">Language : ENG</string>
    <string name="languagePL">Language: PL</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="false">Weather</string>

    <string name="logout">Logout</string>
    <string name="your_choice">Your choice</string>
    <string name="incorrect_data">Incorrect data!!!</string>
    <string name="password_musst_be_identicial">Passwords must be identical!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="lokalization_is_granted">\"Lokalizacja została pomyslnie wyswietlona \"</string>
</resources>