<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.management.ChangePasswordFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryColor">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutOld"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:hint="@string/old_password"
                app:endIconMode="password_toggle"
                app:helperText="@string/helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPasswordOld"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:hint="@string/new_password"
                app:endIconMode="password_toggle"
                app:helperText="@string/helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayoutOld"
                app:layout_constraintStart_toStartOf="@+id/textInputLayoutOld"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutOld">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:hint="@string/confirm_password"
                app:endIconMode="password_toggle"
                app:helperText="@string/helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputConfirmChangedPassword"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonConfirmNewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2" />

            <Button
                android:id="@+id/buttonCancelnewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintStart_toEndOf="@+id/buttonConfirmNewPassword"
                app:layout_constraintTop_toTopOf="@+id/buttonConfirmNewPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/change_password"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>