<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.reservation.ItemReservationDetailFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/colorOnSecondaryDark"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="230dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/summary"
                android:fontFamily="@font/font_2"
                android:textAlignment="center"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="64dp"
                android:src="@drawable/ic_pay"
                app:layout_constraintBottom_toTopOf="@+id/btnShowData"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.232"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textCashSummary"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="48dp"
                android:src="@drawable/ic_calender"
                app:layout_constraintBottom_toBottomOf="@+id/textCashSummary"
                app:layout_constraintStart_toEndOf="@+id/textCashSummary" />

            <TextView
                android:id="@+id/textSelectedData"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />

            <Button
                android:id="@+id/btnCancelReservation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="32dp"
                android:text="@android:string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnShowData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="128dp"
                android:text="@string/select_travel_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_explore"
                app:layout_constraintBottom_toBottomOf="@+id/btnShowData"
                app:layout_constraintStart_toEndOf="@+id/btnShowData"
                app:layout_constraintTop_toTopOf="@+id/btnShowData"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="144dp"
                android:layout_height="114dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_shop"
                app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
                app:layout_constraintEnd_toEndOf="@+id/btnConfirm"
                app:layout_constraintHorizontal_bias="0.604"
                app:layout_constraintStart_toStartOf="@+id/btnConfirm" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="116dp"
                android:layout_height="114dp"
                android:src="@drawable/ic_cancel"
                app:layout_constraintEnd_toEndOf="@+id/btnCancelReservation"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/btnCancelReservation"
                app:layout_constraintTop_toTopOf="@+id/imageView16" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>